# FinWorkOptimizer

./: .github\workflows\ci.yml  .gitignore  CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
docs/: architecture.md  openapi.yaml
include/: Payroll.h  RestServer.h
src/: main.cpp
src/server/: RestServer.cpp  standalone_main.cpp
tests/: finance_tests.cpp
